--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 #map {
         height: 400px;
-        width: 100%;
-		text-align: center;
+        width: 80%;
+		margin:0 auto 0 auto;
+		
        }
