--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,13 @@ body {
 	margin-right: auto;
 	border-radius: 50px;
 }
+#LogOutButton {
+	width: 12%;
+	height: 150%;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 50px;
+}
 
 button {
 	margin-left: auto;
